[workspace]
members = [
    "jito_protos",
    "."
]

[workspace.package]
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
homepage = "https://your-homepage.com"
version = "0.1.0"

[workspace.dependencies]
tonic = { version = "0.10" }

[package]
name = "jito-deshred"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
jito-protos = { path = "./jito_protos" }
solana-entry = "=2.2.1"
tokio = { version = "1", features = ["full"] }
tonic = { workspace = true, features = ["tls", "tls-roots", "tls-webpki-roots"] }
clap = { version = "4.3.0", features = ["derive"] }
env_logger = "0.11.3"
solana-sdk = "=2.2.1"
